--- a/MyULibrary/MyULibrary.UI/src/app/books/books.component.html
+++ b/MyULibrary/MyULibrary.UI/src/app/books/books.component.html
@@ -4,7 +4,12 @@
           <h5 class="card-title">{{book.title}}</h5>
           <p class="card-text">Autor: {{book.author}}</p>
           <p class="card-text">Genre: {{book.genre}}</p>
+         
           <p class="card-text">Date released: {{book.showPublished}} </p>
+        </div>
+        <div class="card-footer">
+          <span class="card-text">Quantity: {{book.quantity}}</span>&nbsp;
+          <button  type="submit" class="btn btn-primary">Reserve</button>
         </div>
       </div>
 </div>
