--- a/MyULibrary/MyULibrary.UI/src/app/app.component.html
+++ b/MyULibrary/MyULibrary.UI/src/app/app.component.html
@@ -351,7 +351,9 @@
    
   </div>
 
-    <router-outlet></router-outlet>
+    <router-outlet>
+      <app-login [hidden]="showLogin" ></app-login>
+    </router-outlet>
   
   
 </div>
