--- a/MyULibrary/MyULibrary.UI/src/app/createusers/createusers.component.html
+++ b/MyULibrary/MyULibrary.UI/src/app/createusers/createusers.component.html
@@ -12,6 +12,14 @@
           <label for="exampleInputPassword1">Email</label>
           <input [(ngModel)] = "user.Email" type="email" class="form-control" id="exampleInputPassword1" placeholder="Email">
       </div>
+
+      <div class="form-group">
+        <label for="exampleInputPassword1">Role</label>
+        <select [(ngModel)]="user.Role" class="form-control">
+            <option value="Librarian" >Librarian</option>
+            <option value="Librarian">Student</option>
+        </select>
+      </div>
       <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
           <input [(ngModel)] = "user.Password" min="1" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
