--- a/MyULibrary/MyULibrary.UI/src/app/createusers/createusers.component.html
+++ b/MyULibrary/MyULibrary.UI/src/app/createusers/createusers.component.html
@@ -1,5 +1,5 @@
-
-    <div class="form-group">
+<a routerLink="/users">Back</a>  
+      <div class="form-group">
         <label for="exampleInputEmail1">First name</label>
         <input [(ngModel)]="user.FirstName" type="text" class="form-control" placeholder="First name">
        
